crates/cli/tests/snapshots/activate_test__activate__export__includes_shell_aliases_if_no_tools-8.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

hide-env PROTO_VERSION
alias .. = cd ..
alias gs = git status
$env._PROTO_ACTIVATED_ALIASES = '..,gs'
$env._PROTO_ACTIVATED_PATH = '<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin'
