crates/cli/tests/snapshots/activate_test__activate__export__includes_tool_env-3.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---

export KEY1=value1;
export KEY2=value2;
unset PROTO_VERSION;
export _PROTO_ACTIVATED_ENV=KEY1,KEY2;
export _PROTO_ACTIVATED_PATH=<WORKSPACE>/.proto/shims:<WORKSPACE>/.proto/bin;
